kubernetes/apps/monitoring/loki/pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: logcli
  namespace: monitoring
  labels:
    app.kubernetes.io/name: logcli
spec:
  containers:
    - name: logcli
      image: quay.io/tapih/logcli:v0.2.0.2
