kubernetes/apps/monitoring/loki/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: loki-svc
  namespace: monitoring
  labels:
    app: loki
    group: grafana
spec:
  type: NodePort
  ports:
    - port: 3100
      targetPort: 3100
      protocol: TCP
  selector:
    app: loki
    group: grafana
