kubernetes/apps/monitoring/loki/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: loki-ingress
  namespace: monitoring
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
    - host: loki.pnfb.home
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: loki-svc
                port:
                  number: 80
